@@ -1,5 +1,6 @@
 Version 1.0-4 (2012-12-29)
 o Added interpPlot for plotting interpolations between two data sets, with data ellipses, etc.
+o interpPlot gains add=, points= and col= arguments
 
 Version 1.0-2 (2012-12-05)
 o Added schooldata and further example of comparison of mlm with robmlm()
